[project]
name = "maxkb"
version = "2.0.0"
description = "强大易用的开源企业级智能体平台"
authors = [{ name = "shaohuzhang1", email = "shaohu.zhang@fit2cloud.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "django==5.2.7",
    "drf-spectacular[sidecar]==0.28.0",
    "django-redis==6.0.0",
    "django-db-connection-pool==1.2.6",
    "django-mptt==0.18.0",
    "psycopg[binary]==3.2.10",
    "python-dotenv==1.1.1",
    "uuid-utils==0.11.1",
    "captcha==0.7.1",
    "pytz==2025.2",
    "psutil==7.1.0",
    "cffi==2.0.0",
    "beautifulsoup4==4.14.2",
    "jieba==0.42.1",
    "langchain-openai==0.3.35",
    "langchain-anthropic==0.3.22",
    "langchain-community==0.3.31",
    "langchain-deepseek==0.1.4",
    "langchain-google-genai==2.1.12",
    "langchain-mcp-adapters==0.1.11",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.10",
    "langgraph==0.6.10",
    "torch==2.9.0",
    "sentence-transformers==5.1.1",
    "qianfan==0.4.12.3",
    "zhipuai==2.1.5.20250825",
    "volcengine-python-sdk[ark]==4.0.26",
    "boto3==1.40.54",
    "tencentcloud-sdk-python==3.0.1475",
    "xinference-client==1.10.1",
    "anthropic==0.71.0",
    "dashscope==1.24.6",
    "celery[sqlalchemy]==5.5.3",
    "django-celery-beat==2.8.1",
    "celery-once==3.0.1",
    "django-apscheduler==0.7.0",
    "html2text==2025.4.15",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "pymupdf==1.26.5",
    "pypdf==6.1.1",
    "pydub==0.25.1",
    "pysilk==0.0.1",
    "gunicorn==23.0.0",
    "python-daemon==3.1.2",
    "websockets==15.0.1",
    "pylint==4.0.1",
    "cohere==5.19.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "macpytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
    { index = "pytorch", marker = "sys_platform == 'win'" },
    { index = "macpytorch", marker = "sys_platform == 'darwin'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"