[project]
name = "maxkb"
version = "2.0.0"
description = "强大易用的开源企业级智能体平台"
authors = [{ name = "shaohuzhang1", email = "shaohu.zhang@fit2cloud.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "django==5.2.10",
    "drf-spectacular[sidecar]==0.29.0",
    "django-redis==6.0.0",
    "django-db-connection-pool==1.2.6",
    "django-mptt==0.18.0",
    "psycopg[binary]==3.3.2",
    "python-dotenv==1.2.1",
    "uuid-utils==0.14.0",
    "captcha==0.7.1",
    "pytz==2025.2",
    "psutil==7.2.1",
    "cffi==2.0.0",
    "beautifulsoup4==4.14.3",
    "jieba==0.42.1",
    "langchain-openai==1.1.7",
    "langchain-anthropic==1.3.1",
    "langchain-community==0.4.1",
    "langchain-deepseek==1.0.1",
    "langchain-google-genai==4.2.0",
    "langchain-mcp-adapters==0.2.1",
    "langchain-huggingface==1.2.0",
    "langchain-ollama==1.0.1",
    "langgraph==1.0.7",
    "torch==2.10.0",
    "sentence-transformers==5.2.0",
    "qianfan==0.4.12.3",
    "zhipuai==2.1.5.20250825",
    "volcengine-python-sdk[ark]==5.0.7",
    "boto3==1.42.33",
    "tencentcloud-sdk-python==3.1.36",
    "xinference-client==1.16.0",
    "anthropic==0.76.0",
    "dashscope==1.25.9",
    "celery[sqlalchemy]==5.6.2",
    "django-celery-beat==2.8.1",
    "celery-once==3.0.1",
    "django-apscheduler==0.7.0",
    "html2text==2025.4.15",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "pymupdf==1.26.7",
    "pypdf==6.6.0",
    "pydub==0.25.1",
    "pysilk==0.0.1",
    "gunicorn==24.0.0",
    "python-daemon==3.1.2",
    "websockets==16.0",
    "pylint==4.0.4",
    "cohere==5.20.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "macpytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
    { index = "pytorch", marker = "sys_platform == 'win'" },
    { index = "macpytorch", marker = "sys_platform == 'darwin'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"